fix: fix flicker bug

--- a/src/_shared.scss
+++ b/src/_shared.scss
@@ -61,7 +61,7 @@ body[data-theme='dark'] .main-hero {
 }
 .main-hero {
   @media all and (max-width: 768px) {
-    min-height: 100dvh;
+    // min-height: 100dvh;
   }
 }
 .footer {
